--- a/app/views/usage_notifier/level_message.html.erb
+++ b/app/views/usage_notifier/level_message.html.erb
@@ -1,5 +1,14 @@
-The HughesNet usage is 
+The HughesNet usage for site <%= @user.site %> is 
 
 	Usage: <%= @usage.download_24hr %> MB
 	As of: <%= @usage.period_from.to_s %>
 
+For details, visit http://www.husage.com
+
+----------------------------------
+
+The Husage service is for informational purposes only. No warranty is expressed or implied. 
+NOT AFFILIATED WITH HUGHES, HughesNet, Hughes Network Systems LLC, etc.
+
+Is this service useful? Buy me a cup of coffee! 
+<%=> info_url('donate') %>
