--- a/app/views/layouts/original.html.erb
+++ b/app/views/layouts/original.html.erb
@@ -9,5 +9,6 @@
 	<h3>Husage: Satellite Internet Usage Utility</h3>
 	<%= render :partial => 'layouts/menu' %>
 	<%= yield %>
+	<%= render :partial => 'layouts/footer' %>
 </body>
 </html>
