--- a/app/views/usage_notifier/level_message.html.erb
+++ b/app/views/usage_notifier/level_message.html.erb
@@ -10,5 +10,5 @@ For details, visit http://www.husage.com
 The Husage service is for informational purposes only. No warranty is expressed or implied. 
 NOT AFFILIATED WITH HUGHES, HughesNet, Hughes Network Systems LLC, etc.
 
-Is this service useful? Buy me a cup of coffee! 
-<%=> info_url('donate') %>
+Is this service useful? <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7338918">Buy me a cup of coffee!</a>
+<%#=> info_url('donate') %>
