--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -15,7 +15,7 @@
 	<li>Personal preferences to set Warning and Alert levels, email addresses, etc</li>
 </ul>
 	
-<p>Since there may be other HughesNet customers who could use this tool, we decided to let you use it for free. If you find it useful, maybe you could help support this service with a <%= link_to 'small donation, a tank of gas, or a cup of coffee', info_path('donate') %>!</p>
+<p>Since there may be other HughesNet customers who could use this tool, we decided to let you use it for free. If you find it useful, maybe you could help support this service with a <%= link_to 'small donation', info_path('donate') %>!</p>
 
 <p>If you have any questions, <%= mail_to "husage.net@gmail.com", "contact us", :encode => :javascript %></p>
 
