--- a/app/views/info/donate.html.erb
+++ b/app/views/info/donate.html.erb
@@ -1,5 +1,5 @@
 <h1>Your support is appreciated</h1>
 
-<p>Like this service? If you find it useful, maybe you could help support this service with a <i>small donation, a tank of gas, or a cup of coffee</i>!</p>
+<p>Like this service? Buy me a cup of coffee, or tank of gas</i>! If you find this service useful, help support it with a small donation of $5, or $25, or whatever seems good to you.</p>
 
 <%= render :partial => 'layouts/donate' %>
