--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -2,7 +2,7 @@
 
 <p>Hi,</p>
 
-<p>Our family is a HughesNet customer. Like all HughesNet users we are subject to the so-called "Fair Access Policy" which limits the number of megabytes we can download in any 24 hour period. If and when we exceed this limit, the service virtually shuts down, slowing access to less than dial-up speed for the next 24 hours.</p>
+<p>Our family is a HughesNet customer. Like all HughesNet users we are subject to the so-called "Fair Access Policy" (FAP) which limits the number of megabytes we can download in any 24 hour period. If and when we exceed this limit, the service virtually shuts down, slowing access to less than dial-up speed for the next 24 hours.</p>
 
 <p> This is a brutal disruption, especially for families like ours who rely on the internet all the time, for email, web browsing, running a home-based business, homework, itunes, youtube, games, system updates, and so on.</p>
 
@@ -15,7 +15,7 @@
 	<li>Personal preferences to set Warning and Alert levels, email addresses, etc</li>
 </ul>
 	
-<p>Since there may be other HughesNet customers who could use this tool, we decided to let you use it for free. If you find it useful, maybe you could help support this service with a <%= link_to 'small donation', info_path('donate') %>!</p>
+<p>Since there may be other HughesNet customers who could use this tool, <strong>we decided to let you use it for free for your own HughesNet usage reports</strong>. If you find it useful, maybe you could help support this service with a <%= link_to 'small donation', info_path('donate') %>!</p>
 
 <p>If you have any questions, <%= mail_to "husage.net@gmail.com", "contact us", :encode => :javascript %></p>
 
