--- a/app/views/notifier/usage_message.erb
+++ b/app/views/notifier/usage_message.erb
@@ -1,6 +1,6 @@
-The HughesNet usage for site <%= @user.site %> is 
+The download usage for HughesNet site <%= @user.site %> is 
 
-	Usage: <%= @usage.download_24hr %> MB
+	Downloads: <%= @usage.download_24hr %> MB
 	As of: <%= @usage.period_from.to_s %>
 
 For details, visit http://www.husage.com
@@ -10,5 +10,4 @@ For details, visit http://www.husage.com
 The Husage service is for informational purposes only. No warranty is expressed or implied. 
 NOT AFFILIATED WITH HUGHES, HughesNet, Hughes Network Systems LLC, etc.
 
-Is this service useful? <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7338918">Buy me a cup of coffee!</a>
-<%#=> info_url('donate') %>
+Is this service useful? "Buy me a cup of coffee!" <%= info_url('donate') %>
