--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,8 +1,7 @@
 <h1>Forgot Password</h1>
  
-Fill out the form below and instructions to reset your password will be emailed to you:<br />
-<br />
- 
+<p>Enter your Site ID and instructions to reset your password will be emailed to you</p>
+
 <% form_tag password_resets_path do %>
   <label>HughesNet Site ID:</label><br />
   <%= text_field_tag "site" %><br />
