--- a/app/views/notifier/usage_message.erb
+++ b/app/views/notifier/usage_message.erb
@@ -1,9 +1,9 @@
-The download usage for HughesNet site <%= @user.site %> is 
+The download usage for HughesNet site <%= @user.site %> has exceeded your <%= @user >= @user.alert_threshold ? "ALERT (#{@user.alert_threshold})" : "WARNING (#{@user.warning_threshold})" %> threshold. 
 
 	Downloads: <%= @usage.download_24hr %> MB
-	As of: <%= @usage.period_from.to_s %>
+	for 24 hour period ending: <%= @usage.period_from..strftime "%m/%d/%Y %H:59" %> (Eastern time) as reported by HughesNet
 
-For details, visit http://www.husage.com
+More details at http://www.husage.net
 
 ----------------------------------
 
