--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -1,6 +1,6 @@
 <div id="husage" class="mainText">
 	<!-- <img width"182" height="61" src="http://customercare.myhughesnet.com/images/hnet-logo.gif"/> -->
-	<%= button_to "Re-calculate", refresh_path, :style => "float:right; padding:1em", :title => 'Load the latest act_usage report from HughesNet and re-calculate the totals' %>
+	<%= button_with_disable_to "Re-calculate", refresh_path, :style => "float:right; padding:1em", :title => 'Load the latest act_usage report from HughesNet and re-calculate the totals' %>
 	
 	<p>Adapted from HughesNet act_usage report. Most recent items are on top. Downloads and 24 hour download totals are bold. Usage above thresholds are color coded. You can <%= link_to "change your preferences", preferences_path %>.</p>
 	
@@ -16,8 +16,8 @@
 		<div style="border: 1px solid #666; padding: 1em">
 			<div class="legend">
 				<span>Legend:</span>
-				<div class="level-alert">24hr download > <%= current_user.alert_threshold %>MB</div>
-				<div class="level-warning">24hr download > <%= current_user.warning_threshold %>MB</div>
+				<div class="level-alert">24hr download > <strong><%= current_user.alert_threshold %></strong>MB</div>
+				<div class="level-warning">24hr download > <strong><%= current_user.warning_threshold %></strong>MB</div>
 				<div class="freetime">Free bandwidth</div>
 			</div>			
 			<p style="text-align:center; font-weight:bold">
