--- a/app/views/usages/setup.html.erb
+++ b/app/views/usages/setup.html.erb
@@ -1,4 +1,4 @@
 <h1>First time setup</h1>
 <p>To begin we need to generate your initial usage report. Please click the button below. This may take a few moments.</p>
 
-<%= button_to "Load and calculate first report", setup_create_path %>
+<%= button_with_disable_to "Load and calculate first report", setup_create_path %>
