--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Husage: Satellite Internet Usage Utility</title>
-	<meta name="Description" content="Submit.. Review.. Decide! Use ReviewRamp wherever you accept application forms. Customize forms, data, and pages. Securely manage your private community of submitters and reviewers. Easy to setup." />
-	<meta name="Keywords" content="husage, hughesnet usage, HughesNet, myhughesnet, Site ID, frm_usage, act_usage, satellite internet, usage, FAP, Fair Access Policy" />
+	<meta name="Description" content="The Husage utility for HughesNet users provides reports of your download usage over 24 hour periods, 
+	and sends you an email alert if your usage level exceeds a threshold." />
+	<meta name="Keywords" content="husage, HughesNet, myhughesnet, downloads, Site ID, frm_usage, act_usage, satellite internet, usage, FAP, Fair Access Policy" />
 
 	<%= stylesheet_link_tag "http://customercare.myhughesnet.com/style/style.css" %>
   <%= stylesheet_link_tag 'style' %>
