--- a/app/views/usages/_usage.html.erb
+++ b/app/views/usages/_usage.html.erb
@@ -8,8 +8,8 @@
 	%>
 <tr>
 	<td class="align-center <%= css %>"><%= usage.period_from.strftime "%m/%d/%Y" %></td>	
-	<td class="align-center <%= css %>"><%= usage.period_from.time.strftime "%H:00" %></td>	
-	<td class="align-center <%= css %>"><%= usage.period_from.time.strftime "%H:59" %></td> 
+	<td class="align-center <%= css %>"><%= usage.period_from.strftime "%H:00" %></td>	<%# was usage.period_from.time.strftime %>
+	<td class="align-center <%= css %>"><%= usage.period_from.strftime "%H:59" %></td> 
 	<td class="align-right <%= css %>"><%= usage.min_used %>&nbsp;&nbsp;&nbsp;&nbsp;</td>	
 	<td class="align-right <%= css %>"><b><%= usage.download %></b>&nbsp;&nbsp;&nbsp;&nbsp;</td>	
 	<td class="align-center <%= css %>"><%= usage.fap %></td>
