--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,15 +15,25 @@
 	<br />
 	<fieldset>
 		<legend>Usage Settings</legend>
+				<p>Choose Warning and Alert thresholds based on your service plan.
+					 For example, if your FAP is at 375MB you may want to
+					receive alerts at 250 and 325</p>
+			<div class="fap-data">
+				<p>FAP Thresholds based on service plan (as of Aug 1, 2009)</p>
+				<table border="1">
+					<tr><th>Home</th><th>Pro</th><th>Pro Plus</th><th>Sm Office</th><th>Business</th></tr>
+					<tr><td>200 MB</td><td>375 MB</td><td>425 MB</td><td>500 MB</td><td>1250 MB</td></tr>
+				</table>
+			</div>
 		<%= f.label :warning_threshold %> <%= f.error_message_on :warning_threshold %>
 		<%= form_help :warning_threshold %>
 		<br />
-		<%= f.text_field :warning_threshold, :size => 5, :class => 'level-warning' %><br />
+		<%= f.text_field :warning_threshold, :size => 5, :class => 'level-warning' %> MB<br />
 		<br/>
 		<%= f.label :alert_threshold %> <%= f.error_message_on :alert_threshold %>
 		<%= form_help :alert_threshold %>
 		<br />
-		<%= f.text_field :alert_threshold, :size => 5, :class => 'level-alert' %><br />
+		<%= f.text_field :alert_threshold, :size => 5, :class => 'level-alert' %> MB<br />
 		<br/>
 		<%= f.check_box :run_cron %> <%= f.label :run_cron, "Re-calculate hourly" %>
 		<%= form_help :run_hourly %>
