--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -238,6 +238,11 @@ div.inline-button form.button-to div {
 	background-color: #FF6666;
 }
 
+.fapped {
+	background-color: #000;
+	color: #fff;
+}
+
 /* --------------------- */
 
 #footer {
