--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -12,7 +12,7 @@
 	<li>A column for Total Accumulated Downloads from the previous 24 hours (minus the free bandwidth hours)</li>
 	<li>Color coding of periods that exceed given Warning and Alert levels</li>
 	<li>Email alerts when usage exceeds the given Warning and Alert levels</li>
-	<li>Personal preferences to set Warning and Alert levels, email addresses, etc</li>
+	<li>Personal preferences to set Warning and Alert levels, email addresses, time zone, etc</li>
 </ul>
 	
 <p>Since there may be other HughesNet customers who could use this tool, <strong>we decided to let you use it for free for your own HughesNet usage reports</strong>. If you find it useful, maybe you could help support this service with a <%= link_to 'small donation', info_path('donate') %>!</p>
