faq, hughesnet.css, split parse_and_save usages

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <hr/>
 <div id="footer">
 	<p class="align-center">
-		<%= link_to "Home", "/" %> | <%= link_to "About", info_path('about') %>
+		<%= link_to "Home", "/" %> | <%= link_to "About", info_path('about') %> | <%= link_to "FAQ", info_path('faq') %>
 	</p>
 	<p class="align-center">
 		Like this service? Buy me <%= link_to "a cup of coffee or a tank of gas", info_path("donate") %>!
