--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
 	and sends you an email alert if your usage level exceeds a threshold." />
 	<meta name="Keywords" content="husage, HughesNet, myhughesnet, downloads, Site ID, frm_usage, act_usage, satellite internet, usage, FAP, Fair Access Policy" />
 
-	<%= stylesheet_link_tag "http://customercare.myhughesnet.com/style/style.css" %>
+	<%#= stylesheet_link_tag "http://customercare.myhughesnet.com/style/style.css" %>
+	<%= stylesheet_link_tag 'hughesnet' %>
   <%= stylesheet_link_tag 'style' %>
 </head>
 <body>
