--- a/app/views/layouts/original.html.erb
+++ b/app/views/layouts/original.html.erb
@@ -2,7 +2,8 @@
 <head>
   <title>Husage: Satellite Internet Usage Utility</title>
 
-	<%= stylesheet_link_tag "http://customercare.myhughesnet.com/style/style.css"%>
+	<%#= stylesheet_link_tag "http://customercare.myhughesnet.com/style/style.css"%>
+	<%= stylesheet_link_tag 'hughesnet' %>
   <%= stylesheet_link_tag 'style' %>
 </head>
 <body>
