--- a/app/views/info/about.html.erb
+++ b/app/views/info/about.html.erb
@@ -6,7 +6,7 @@
 
 <p> This is a brutal disruption, especially for families like ours who rely on the internet all the time, for email, web browsing, running a home-based business, homework, itunes, youtube, games, system updates, and so on.</p>
 
-<p>My dad is a programmer and wrote this little tool to help us manage our downloads. The Husage utility has better reports than those provided by HughesNet, including</p>
+<p>I wrote this little tool to help us manage our downloads. The Husage utility has better reports than those provided by HughesNet, including</p>
 
 <ul>
 	<li>A column for Total Accumulated Downloads from the previous 24 hours (minus the free bandwidth hours)</li>
@@ -14,7 +14,9 @@
 	<li>Email alerts when usage exceeds the given Warning and Alert levels</li>
 	<li>Personal preferences to set Warning and Alert levels, email addresses, time zone, etc</li>
 </ul>
-	
+
+<p>Also see  the <%= link_to "FAQ", info_path('faq') %></p>
+
 <p>Since there may be other HughesNet customers who could use this tool, <strong>we decided to let you use it for free for your own HughesNet usage reports</strong>. If you find it useful, maybe you could help support this service with a <%= link_to 'small donation', info_path('donate') %>!</p>
 
 <p>If you have any questions, <%= mail_to "husage.net@gmail.com", "contact us", :encode => :javascript %></p>
