refresh returns -1 when bad report

--- a/app/views/info/faq.html.erb
+++ b/app/views/info/faq.html.erb
@@ -26,7 +26,9 @@
 <p>No. We read publicly available usage reports from http://customercare.myhughesnet.com and reformat them. Those reports are 1 to 2 hours behind. I don't know why, that's just the way it is.</p>
 
 <h3>I've heard of an FAP monitor called hnFAPmon. Does Husage replace that?</h3>
-<p>No. hnFAPmon is different and Husage does not replace it. hnFAPmon is a piece of open-source software you install in your HughesNet modem to monitor internet downloads. Its data is more up-to-date than Husage, but also has some drawbacks: it requires technical skills to install, it adds unauthorized code into your modem, and it generates its own data. On the other hand, Husage is very easy to use, you can run reports away from your network, and it uses HughesNet's own reports. Husage also has other features like email notifications. Husage can be used together with, or instead of, hnFAPmon depending on your ability and needs.</p>
+<p>No. hnFAPmon is different and Husage does not replace it. hnFAPmon is a piece of open-source software you install in your HughesNet modem to monitor internet downloads. Its data is more up-to-date than Husage, but also has some drawbacks: it requires technical skills to install, it adds unauthorized code into your modem, and it generates its own data. </p>
+
+<p>On the other hand, Husage is very easy to use, you can run reports away from your network, and it uses HughesNet's own reports. Husage also has other features like email notifications. Husage can be used together with, or instead of, hnFAPmon depending on your ability and needs.</p>
 
 <!-- <h3>Why don't you have a column showing how many megabytes I have left before FAP kicks in?</h3>
 <p>We considered this but there's some issues. First, since our reports are delayed (based on the HughesNet usage reports) that'd be a little dangerous to assume the current usage. </p> -->
