--- a/app/views/notifier/admin_message.erb
+++ b/app/views/notifier/admin_message.erb
@@ -2,5 +2,9 @@
 
 <% unless @user.blank? -%>
 Site ID: <%= @user.site %>
+
+Email: <%= @user.email %>
+Time zone: <%= @user.time_zone %>
+
 <% end -%>
 
