fix empty register

--- a/app/views/info/faq.html.erb
+++ b/app/views/info/faq.html.erb
@@ -36,7 +36,7 @@
 <h3>Why do you need my Site ID, email address, password, and service plan when I sign up?</h3>
 <ul>
 <li>We need your site ID so we can pull up your usage reports from customercare.myhughesnet.com.</li> 
-<li>We need your email address so we can send you a notification if your usage exceeds the warning level. </li>
+<li>We need your email address so we can send you a notification if your usage exceeds the warning level. (We respect your privacy and will never share your email address or send unsolicited emails.)</li>
 <li>You use a password to log in, so that unauthorized people won't mess with your Preferences settings (you're creating a new password; dont give us your HughesNet accounts password!).</li> 
 <li>Your service plan info is optional and is only used to initialize reasonable values for the Warning and Alert thresholds in your reports; this is optional, you do not need to tell us anything else about your HughesNet account.</li>
 </ul>
