Added admin users

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
 		<%= link_to "Home", "/" %> | <%= link_to "About", info_path('about') %> | <%= link_to "FAQ", info_path('faq') %>
 	</p>
 	<p class="align-center">
-		Like this service? Buy me <%= link_to "a cup of coffee or a tank of gas", info_path("donate") %>!
+		Like this service? <%= link_to "Buy me a cup of coffee", info_path("donate") %>!
 	</p>
-	<p>This site is for informational purposes only. All data originates from HughesNet public pages, and is subject to all the same limitations, warnings, and disclaimers offered by HughesNet. No warranty is expressed or implied. Use at your own risk. NOT AFFILIATED WITH HUGHES, HughesNet, Hughes Network Systems LLC, etc.</p>
+	<p>(c) copyright 2009 Parkerhill Technology Group LLC. This site is for informational purposes only. All data originates from HughesNet public pages, and is subject to all the same limitations, warnings, and disclaimers offered by HughesNet. No warranty is expressed or implied. Use at your own risk. NOT AFFILIATED WITH HUGHES, HughesNet, Hughes Network Systems LLC, etc.</p>
 </div>
