--- a/app/views/usages/index.html.erb
+++ b/app/views/usages/index.html.erb
@@ -1,8 +1,8 @@
 <div id="husage" class="mainText">
 	<!-- <img width"182" height="61" src="http://customercare.myhughesnet.com/images/hnet-logo.gif"/> -->
 	<div style="float:right; padding:1em">
-		<%= button_with_disable_to "Re-calculate", refresh_path, :title => 'Load the latest act_usage report from HughesNet and re-calculate the totals' %>
-		<p style="font-style:italic; font-size:80%">Last re-calc: <%= current_user.last_run_at.strftime "%m/%d/%Y %H:%M:%S" %></p>
+		<%= button_with_disable_to "Re-calculate", refresh_path, :title => 'Load the latest act_usage report from HughesNet and re-calculate the totals', :disabled => is_admin? %>
+		<p style="font-style:italic; font-size:80%">Last re-calc: <%= @report_user.last_run_at.strftime "%m/%d/%Y %H:%M:%S" %></p>
 	</div>
 		
 	<p>Adapted from HughesNet act_usage report. Most recent items are on top. Downloads and 24 hour download totals are bold. Usage above thresholds are color coded. You can <%= link_to "change your preferences", preferences_path %>.</p>
@@ -19,8 +19,8 @@
 		<div style="border: 1px solid #666; padding: 1em">
 			<div class="legend">
 				<span>Legend:</span>
-				<div class="level-alert">24hr download > <strong><%= current_user.alert_threshold %></strong>MB</div>
-				<div class="level-warning">24hr download > <strong><%= current_user.warning_threshold %></strong>MB</div>
+				<div class="level-alert">24hr download > <strong><%= @report_user.alert_threshold %></strong>MB</div>
+				<div class="level-warning">24hr download > <strong><%= @report_user.warning_threshold %></strong>MB</div>
 				<div class="freetime">Free bandwidth</div>
 			</div>			
 			<p style="text-align:center; font-weight:bold">
@@ -29,7 +29,7 @@
 			<p>
 				Note:  Usage statistics will only be shown for a Site ID if usage for a given hour is greater than 500KB, the site is subject to the Fair Access Policy or the reported time is during free access periods.
 			</p>
-			<p style="font-style:italic">Times in <%= current_user.time_zone %></p>
+			<p style="font-style:italic">Times in <%= @report_user.time_zone %></p>
 		
 			<table style="clear:both">
 				<thead>
